# geo-swarm-framework

./: .gitignore  CMakeLists.txt  Makefile  README.md  densityplots.ipynb  experiments.ipynb  plotting.py  run_tests.py
apps/: template_states.h  template_states_3d.h
apps/aggregate/: agents.h  appconfig.hpp  colorprint.h  constants.h  simulate.cpp  states.h
apps/alloc/: agents.h  alloc_agents.h  alloc_config.cpp  alloc_states.h  appconfig.hpp  config.cpp  constants.h  run_tests.py  simulate.cpp  states.h
apps/density/: agents.h  appconfig.hpp  config.cpp  constants.h  density_agents.h  density_config.cpp  density_states.h  plotting.ipynb  run_tests.py  simulate.cpp  states.h
apps/density2d/: agents.h  constants.h  run_tests.py  simulate.cpp
apps/density3d/: agents.h  appconfig.hpp  constants.h  simulate.cpp
apps/multi-agent/: agents.h  appconfig.hpp  simulate.cpp  states.h
apps/sample/: agents.h  config.cpp  constants.h  run_tests.py  sample_agents.h  sample_config.cpp  sample_states.h  simulate.cpp  states.h
apps/taskallocation/: agents.h  alloc_agents.h  alloc_config.cpp  alloc_states.h  simulate.cpp
src/: agent.cpp  agent.h  configuration.cpp  configuration.h  configuration.hpp  constants.h  geo_utils.h  main.cpp  map.cpp  map.h  res_utils.h  states.h
src/semisort/: Makefile  defs.h  semisort.cpp  semisort.h  tester.cpp
